# vazir_center

./: .env  .env.production  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose-production.yaml  docker-compose.yaml  package.json  pubspec.yaml  tsconfig.json  vazir_center.sln
.github/workflows/: console.yaml  dev.yml  hessab.yml  nokteh.yaml  release.yml  switcher.yml
Minds/: Cloud.xmind  Vazir Financial Platform.xmind
center/: .env.production  Dockerfile  WeatherForecast.cs  center.csproj  center.http
center/Controllers/: WeatherForecastController.cs
center/Properties/: launchSettings.json
console/: pubspec.yaml
hessab/: .env  .env.production  Dockerfile  README.md  docker-compose.yaml  package.json
hessab/k8s/: mongo-deployment.yaml  mongo-service.yaml  server-service.yaml
hessab/src/: app.module.ts  bootstrap.ts  init.ts
hessab/src/api/: api.module.ts  api.service.ts
hessab/src/db/: db.module.ts  db.service.ts
hessab/src/hessab/: hessab.gateway.ts  hessab.service.ts
hessab/src/hessabdb/: hessabdb.service.ts
hessab/src/nokteh/: nokteh.gateway.ts
hessab/src/v0/: v0.gateway.ts  v0.module.ts  v0.service.ts
hessab/static/: 404.html  index.html
k8s/: mongo-deployment.yaml  server-deployment.yaml
nokteh/: .env  .env.production  Dockerfile  docker-compose-local.yml  package.json
nokteh/src/: app.controller.ts  app.module.ts  bootstrap.ts  init.ts  main.ts
nokteh/src/common/: notfound.exception.ts
nokteh/static/: index.html
panel/: pubspec.yaml
panel/test/: widget_test.dart
panel/web/: index.html
production/: .env  docker-compose.yaml
src/: app.controller.ts  app.module.ts  app.rs  app.service.ts  bootstrap.ts  init.ts  main.rs  main.ts
src/admin/: admin.gateway.ts  admin.module.ts
src/api/: api.controller.ts  api.service.ts
src/api/dto/: index.ts
src/common/constants/: index.ts
src/common/exceptions/: not.found.exception.filter.ts
src/config/: init.rs
src/core/: db.rs  gateway.rs
src/db/: new.rs
src/g_hessab/: gateway.rs
src/hessab/: gateway.rs  hessab.gateway.ts  hessab.module.ts  hessab.service.ts
src/hessabdb/: hessabdb.module.ts  hessabdb.service.ts
src/nokteh/: nokteh.module.ts  nokteh.service.ts
static/: 404.html
static/admin/: flutter_service_worker.js  index.html
stuff/Minds/: Financial Platform.xmind
stuffs/production/: docker-compose.yaml  start.bat
switcher/: .env  .env.production  Cargo.toml  Dockerfile  go.mod  go.sum  main.go  makefile
switcher/public/: unkown_error.html
switcher/src/: client.rs  env.rs  main.rs
switcher/src/cache/: cache.rs  redis.go
switcher/src/common/: body.rs  io_type.rs  mod.rs
switcher/src/core/: asset.rs  env.rs  mod.rs
switcher/src/env/: env.go
switcher/src/errors/: exceptions.rs
switcher/src/servers/: http1.rs  http2.rs
(+21 files in other folders)
