[package]
name = "vazir_center"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
serde = "1.0.196"
serde_json = "1.0.113"
socketioxide = { version = "0.10.2", features = ["extensions", "state"] }
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["cors", "fs"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
