[package]
name = "vazir_center"
version = "0.1.0"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
bson = "2.9.0"
dotenv = "0.15.0"
futures = "0.3.30"
mongoose = "0.2.0"
serde = "1.0.196"
serde_json = "1.0.113"
socketioxide = { version = "0.10.2", features = ["extensions", "state"] }
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros", "full"] }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["cors", "fs"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"


[dependencies.mongodb]
version = "2.8.0"
features = ["tokio-runtime"]


# [[bin]]
# edition = "2021"
# name = "vzr"
# path = "src/main.rs"
