[package]
name = "switcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
dotenvy = "0.15.7"
futures-util = "0.3.30"
rust_socketio = "0.4.4"
serde = "1.0.197"
serde_json = "1.0.114"
socketioxide = { version = "0.11.0", features = ["extensions", "state"] }
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["cors", "fs"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
