[package]
name = "switcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
serde = "1.0.197"
serde_json = "1.0.114"
socketioxide = { version = "0.11.0", features = ["extensions", "state"] }
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["cors", "fs"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
pretty_env_logger = "0.5.0"
log = "0.4.21"
include_assets = "1.0.0"
redis = { version = "0.25.2", features = [
    "tokio-comp",
    "tokio-native-tls-comp",
    "tokio-rustls-comp",
] }
